[project]
name = "pygame-snake"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "pyinstaller (>=4.5,<5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
